--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
+    "chromium": "^3.0.3",
     "cheerio": "^1.0.0-rc.10",
     "cron": "^1.8.2",
     "express": "^4.18.1",
     "google-spreadsheet": "^3.3.0",
+    "node-fetch": "^3.2.4",
     "node-html-parser": "^5.3.3",
     "node-schedule": "^2.1.0",
     "puppeteer": "^13.5.2",
+    "puppeteer-core": "^13.5.2",
     "request": "^2.88.2"
   },
-  "description": ""
+  "description": {
+    "webpack-cli": "^3.3.12"
 }
