--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SearchPMC",
+  "name": "test-project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-	  "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
     "cron": "^1.8.2",
     "express": "^4.18.1",
